demo: dense gliding-assay 98K motors x 100 random filaments x 0.3 s
Single dense gliding-assay run on the iteration 2a kernel at research scale:
14x14x0.5 um box, 500 motors/um^2 (~98K motors), 100 random filaments + 1
canonical = 101, runTime 0.3 s. Wall = 5678 s (94 min) on aorus + RTX 5070.

Three forced configuration deviations from the prompt — each from a
static-cap / no-source-change discovery — documented in JOURNAL.md SS A:
  * 14x14 vs prompted 20x20 (MyoMotor.theMotors[100000] static cap)
  * runTime 0.3 s vs prompted 1.0 s (smoke ETA was 5+ hr at full size)
  * motors written every frame (no source-level toggle for filaments-only)

Headline finding: at this M the GPU motor-binding kernel is only 4.92% of
wall (279.6 s / 5678 s). ThingStep (28.9%), Brownian (16.0%), and
MotorBindGrid3D Fill (15.0%) dominate. Per-call exec grew only 1.46x from
M=500 to M=98000 (5.34 -> 7.77 ms) — the iter2a kernel scales well. The
iter2b priority order is moveThing first, then Brownian, then collapsing
fillSoaArrays + grid-build into GPU residency.

Adds:
  * ParameterFiles/glidingDense_demo            (production config)
  * ParameterFiles/glidingDense_demo_smoke      (0.01 s smoke variant)
  * scripts/sanity_check_dense_demo.py          (JSON smell-test for task F)
  * JOURNAL.md entry "Dense gliding-assay demo: 98K motors x 100 random filaments x 0.3 s"

No source-code changes.

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>